@@ -1,5 +1,11 @@
 2014-12-28  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
+	Tag all files for release of mingwrt-3.21.
+
+	* include/_mingw.h: Adjust version accordingly.
+
+2014-12-28  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
 	Improve usage notes in stdlib.h, for mkstemp() function.
 
 	* include/stdlib.h (MKSTEMP_SETMODE): Explain usage; this is a copy of
